[package]
name = "rust-sys-mon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sysinfo = "0.29.11"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
serde = "1.0"        # For JSON serialization
serde_json = "1.0"
log4rs = "1.2.0"
log = "0.4.20"
logwatcher = "0.1"

